# Breaking-the-Sorting-Barrier-for-Directed-Single-Source-Shortest-Paths-inference

./: .gitignore  CMakeLists.txt  FINAL_SUMMARY.md  IMPLEMENTATION_README.md  QUICKSTART.md  README.md  RESEARCH_PROPOSAL.md  VERIFICATION_CHECKLIST.md  VERIFICATION_REPORT.md
datasets/poster_quick/: graph_small_10000v_50000e.txt
docs/: HPC_OPTIMIZATION_DESIGN.md
include/: classical_sssp.hpp  comprehensive_benchmark.hpp  cuda_sssp.cuh  graph.hpp  parallel_sssp.hpp  partial_sort_ds.hpp  sssp_algorithm.hpp
paper/: experiment_results_section.md  paper_ko.md  poster_ko.md  poster_ko_final.md
results/comprehensive/: ablation_results.json  benchmark_results.json  scalability_results.json  summary.txt
results/poster_quick/: benchmark_results.json  scalability_results.json
results/processed/: ablation_results.csv  ablation_study.md  algorithm_comparison.md  benchmark_results.csv  charts.txt  comprehensive_report.txt  dataset_summary.csv  dataset_summary.md  performance_summary.csv  performance_summary.md  scalability.md  scalability_results.csv
scripts/: build.sh  download_road_networks.sh  download_social_networks.sh  download_web_graphs.sh  generate_comprehensive_results.py  process_results_simple.py  quick_benchmark_for_poster.sh  run_benchmark.sh  run_tests.sh
src/: classical_sssp.cpp  cuda_sssp.cu  graph.cpp  main.cpp  parallel_sssp.cpp  partial_sort_ds.cpp  sssp_algorithm.cpp
tests/: benchmark.cpp  graph_generator.cpp  test_cuda.cpp  test_parallel.cpp  test_sequential.cpp
utils/: collect_results.py  generate_paper_figures.py  generate_paper_tables.py  requirements.txt
